# nl2kg

./: README.md
docs/results/: kg_dialogue_500.json  results-Llama-3.1-8B.json  results-Nemotron3-Nano-4B.json  results-Phi-4-mini-instruct.json  results-Qwen-3-4B.json  results-Qwen-3.5-4B.json  results-Qwen-3.5-9B.json  results-gemma-3-4b-it.json
evaluation/: README.md  analyze_results.py  evaluate.py  generate_dataset.py  metrics.py  run_all_experiments.sh
evaluation/dataset/: kg_dialogue_500.json
evaluation/results/: results-Nemotron3-Nano-4B-grammar.json  results-Nemotron3-Nano-4B-no_grammar.json  results-Phi-4-mini-instruct-grammar.json  results-Phi-4-mini-instruct-no_grammar.json  results-Qwen-3-4B-grammar.json  results-Qwen-3-4B-no_grammar.json  results-Qwen-3.5-4B-grammar.json  results-Qwen-3.5-4B-no_grammar.json  results-gemma-3-4b-it-grammar.json  results-gemma-3-4b-it-no_grammar.json  results-gemma-4-4b-it-grammar.json  results-gemma-4-4b-it-no_grammar.json
nl2kg/: package.xml  setup.cfg  setup.py
nl2kg/grammars/: nl2kg.gbnf
nl2kg/json_schemas/: nl2kg.json
nl2kg/nl2kg/: kg_context.py  metrics.py  models.py  nl2kg_cli.py  nl2kg_hri_node.py  nl2kg_node.py  utils.py
nl2kg/scripts/: evaluate.py  generate_dataset.py
nl2kg_bringup/: package.xml  setup.cfg  setup.py
nl2kg_bringup/launch/: nl2kg.launch.py
nl2kg_bringup/params/: bge-base-en-v1.5.yaml  bge-reranker-v2-m3.yaml  llm.yaml  nl2kg.yaml  piper.yaml  qwen3_4b.yaml  whisper.yaml
nl2kg_msgs/: CMakeLists.txt  package.xml
nl2kg_msgs/action/: NL2KG.action
nl2kg_msgs/msg/: KGOperation.msg
