<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nl2kg</name>
  <version>1.0.0</version>
  <description>NL2KG: Bidirectional Natural Language Interface for Robot Knowledge Graphs</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nl2kg_msgs</exec_depend>
  <exec_depend>knowledge_graph</exec_depend>
  <exec_depend>llama_ros</exec_depend>
  <exec_depend>llama_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
